--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ EMAIL_USERNAME = "livnenko.oleg1998@gmail.com"
 EMAIL_PASSWORD = "mms199914!@#try123"
 MONGO_ATLAS = "enter-your-mongo-uri"
 BASE_URL = "http://localhost:5000"
+PORT="https://54.196.141.245"
