--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
-    "start:server": "nodemon server/index.js"
+    "start:server": "node server/index.js"
   },
   "keywords": [],
   "author": "",
