--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/translate": "^6.3.1",
     "@withvoid/make-validation": "^1.0.5",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
